--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		%sveltekit.head%
-	</head>
-	<body>
-		<div>%sveltekit.body%</div>
-	</body>
+<html lang="en" class="ui-theme-dark">
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<meta name="viewport" content="width=device-width" />
+
+	<link rel="manifest" href="manifest.json" />
+	<!-- IOS SUPPORT -->
+	<meta name="apple-mobile-web-app-status-bar" />
+	<meta name="theme-color" />
+	<meta name="apple-mobile-web-app-status-bar-style">
+
+	<meta name="description" content="A free, open source, cloud synced pixel art tool." />
+	<meta property="og:image" content="./assets/icon.png" />
+	<meta property="og:title" content="BitShift">
+	<meta property="og:url" content="https://bitshift.hyperio.org/">
+	<meta property="og:description" content="A free, cloud synced pixel art tool.">
+	<meta name="keywords"
+		content="BitShift, Hyperio, Pixel Art, Art, Art editing, Drawing, Free drawing, art editor, open source">
+	<link rel="apple-touch-icon" href="./assets/icon.png">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="BitShift">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	%sveltekit.head%
+</head>
+
+<body>
+	<div>%sveltekit.body%</div>
+</body>
+
 </html>
